--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Perdido</string>
-    <string name="logo_de_la_aplicacion">logo de la aplicacion</string>
-    <string name="iniciar_sesion">Iniciar Sesion</string>
+    <string name="app_name">Perdido y Hallado</string>
+    <string name="logo_de_la_aplicacion">logo de la aplicación</string>
+    <string name="iniciar_sesion">Iniciar Sesión</string>
     <string name="Registrarse">Registrarse</string>
-    <string name="atras">Atras</string>
-    <string name="icono_de_una_persona">Icono de una persona</string>
+    <string name="atras">Atrás</string>
+    <string name="icono_de_una_persona">Ícono de una persona</string>
     <string name="ingrese_su_correo">Ingrese su correo</string>
     <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
     <string name="entrar">Entrar</string>
@@ -13,23 +13,21 @@
     <string name="correo">Correo</string>
     <string name="contrase_a">Contraseña</string>
     <string name="repetir_contrase_a">Repetir contraseña</string>
-    <string name="numero_telefono">Numero Telefono</string>
-    <string name="boton_forma_de_casa">Boton forma de casa</string>
-    <string name="boton_forma_lupa">Boton forma lupa</string>
-    <string name="boton_forma_usuario">Boton forma usuario</string>
+    <string name="numero_telefono">Número Teléfono</string>
+    <string name="boton_forma_de_casa">Botón forma de casa</string>
+    <string name="boton_forma_lupa">Botón forma lupa</string>
+    <string name="boton_forma_usuario">Botón forma usuario</string>
     <string name="perdido">Perdido</string>
     <string name="encontrado">Encontrado</string>
     <string name="mis_publicaciones">Mis Publicaciones</string>
     <string name="guardado">Guardado</string>
     <string name="editar_cuenta">Editar Cuenta</string>
     <string name="salir">Salir</string>
-    <string name="boton_circular">boton circular</string>
+    <string name="boton_circular">Botón circular</string>
     <string name="publicar">Publicar</string>
     <string name="nombre_objeto">Nombre Objeto</string>
-    <string name="descripcion_objeto">Descripcion Objeto</string>
-    <string name="donde">Donde</string>
-    <string name="busqueda">Busqueda</string>
+    <string name="descripcion_objeto">Descripción Objeto</string>
+    <string name="donde">Dónde</string>
+    <string name="busqueda">Búsqueda</string>
     <string name="guardar">Guardar</string>
-
-
 </resources>
